[package]
name = "gadgets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { git = "https://github.com/arkworks-rs/std", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-relations = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve" ] }
ark-snark = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", default-features = false }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", default-features = false }
ark-groth16 = { git = "https://github.com/achimcc/groth16", default-features = false }
blake2 = { version = "0.9", default-features = false }
rand = "0.8.5"

[patch.crates-io]
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-snark = { git = "https://github.com/arkworks-rs/snark" }
ark-groth16 = { git = "https://github.com/achimcc/groth16" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives" }
ark-sponge = { git = "https://github.com/arkworks-rs/sponge" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std" }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }
ark-relations = { git = "https://github.com/arkworks-rs/snark" }

