[package]
name = "gadgets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.4.0-alpha", default-features = false }
ark-ff = { version = "0.4.0-alpha", default-features = false }
ark-serialize = { version = "0.4.0-alpha", default-features = false }
ark-relations = { version = "0.4.0-alpha", default-features = false }
ark-bls12-381 = { version = "0.4.0-alpha", default-features = false, features = [ "curve" ] }
ark-snark = { version = "0.4.0-alpha", default-features = false }
ark-poly = { version = "0.4.0-alpha", default-features = false }
ark-crypto-primitives = { version = "0.4.0-alpha", default-features = false }
ark-r1cs-std = { version = "0.4.0-alpha", default-features = false }
ark-groth16 = { git = "https://github.com/achimcc/groth16", branch = "master", default-features = false }
blake2 = { version = "0.9", default-features = false }
rand = "0.8.5"

[patch.crates-io]

